# internal/server/swagger/openapi.yaml
@@ -18,6 +18,193 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/sovereign.api.v1.HealthCheckReply'
+    /v1/datasource:
+        post:
+            tags:
+                - DataSource
+            operationId: DataSource_CreateDataSource
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/sovereign.api.v1.CreateDataSourceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.CreateDataSourceReply'
+    /v1/datasource/{uid}:
+        get:
+            tags:
+                - DataSource
+            operationId: DataSource_GetDataSource
+            parameters:
+                - name: uid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.DataSourceItem'
+        put:
+            tags:
+                - DataSource
+            operationId: DataSource_UpdateDataSource
+            parameters:
+                - name: uid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/sovereign.api.v1.UpdateDataSourceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.UpdateDataSourceReply'
+        delete:
+            tags:
+                - DataSource
+            operationId: DataSource_DeleteDataSource
+            parameters:
+                - name: uid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.DeleteDataSourceReply'
+    /v1/datasource/{uid}/status:
+        put:
+            tags:
+                - DataSource
+            operationId: DataSource_UpdateDataSourceStatus
+            parameters:
+                - name: uid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/sovereign.api.v1.UpdateDataSourceStatusRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.UpdateDataSourceStatusReply'
+    /v1/datasources:
+        get:
+            tags:
+                - DataSource
+            operationId: DataSource_ListDataSource
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: keyword
+                  in: query
+                  schema:
+                    type: string
+                - name: status
+                  in: query
+                  schema:
+                    type: integer
+                    format: enum
+                - name: type
+                  in: query
+                  schema:
+                    type: string
+                - name: engine
+                  in: query
+                  schema:
+                    type: string
+                - name: namespaceUid
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.ListDataSourceReply'
+    /v1/datasources/select:
+        get:
+            tags:
+                - DataSource
+            operationId: DataSource_SelectDataSource
+            parameters:
+                - name: keyword
+                  in: query
+                  schema:
+                    type: string
+                - name: limit
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: lastUID
+                  in: query
+                  schema:
+                    type: string
+                - name: status
+                  in: query
+                  schema:
+                    type: integer
+                    format: enum
+                - name: type
+                  in: query
+                  schema:
+                    type: string
+                - name: engine
+                  in: query
+                  schema:
+                    type: string
+                - name: namespaceUid
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/sovereign.api.v1.SelectDataSourceReply'
     /v1/namespace:
         post:
             tags:
@@ -183,6 +370,32 @@ paths:
                                 $ref: '#/components/schemas/sovereign.api.v1.SelectNamespaceReply'
 components:
     schemas:
+        sovereign.api.v1.CreateDataSourceReply:
+            type: object
+            properties: {}
+        sovereign.api.v1.CreateDataSourceRequest:
+            type: object
+            properties:
+                namespaceUid:
+                    type: string
+                type:
+                    type: string
+                engine:
+                    type: string
+                name:
+                    type: string
+                endpoint:
+                    type: string
+                description:
+                    type: string
+                config:
+                    type: object
+                    additionalProperties:
+                        type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
         sovereign.api.v1.CreateNamespaceReply:
             type: object
             properties: {}
@@ -195,6 +408,52 @@ components:
                     type: object
                     additionalProperties:
                         type: string
+        sovereign.api.v1.DataSourceItem:
+            type: object
+            properties:
+                uid:
+                    type: string
+                namespaceUid:
+                    type: string
+                type:
+                    type: string
+                engine:
+                    type: string
+                name:
+                    type: string
+                status:
+                    type: integer
+                    format: enum
+                endpoint:
+                    type: string
+                description:
+                    type: string
+                config:
+                    type: object
+                    additionalProperties:
+                        type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
+                createdAt:
+                    type: string
+                updatedAt:
+                    type: string
+        sovereign.api.v1.DataSourceItemSelect:
+            type: object
+            properties:
+                value:
+                    type: string
+                label:
+                    type: string
+                disabled:
+                    type: boolean
+                tooltip:
+                    type: string
+        sovereign.api.v1.DeleteDataSourceReply:
+            type: object
+            properties: {}
         sovereign.api.v1.DeleteNamespaceReply:
             type: object
             properties: {}
@@ -208,6 +467,21 @@ components:
                 timestamp:
                     type: string
                     format: date-time
+        sovereign.api.v1.ListDataSourceReply:
+            type: object
+            properties:
+                total:
+                    type: string
+                page:
+                    type: integer
+                    format: int32
+                pageSize:
+                    type: integer
+                    format: int32
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/sovereign.api.v1.DataSourceItem'
         sovereign.api.v1.ListNamespaceReply:
             type: object
             properties:
@@ -252,6 +526,19 @@ components:
                     type: boolean
                 tooltip:
                     type: string
+        sovereign.api.v1.SelectDataSourceReply:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/sovereign.api.v1.DataSourceItemSelect'
+                total:
+                    type: string
+                lastUID:
+                    type: string
+                hasMore:
+                    type: boolean
         sovereign.api.v1.SelectNamespaceReply:
             type: object
             properties:
@@ -265,6 +552,42 @@ components:
                     type: string
                 hasMore:
                     type: boolean
+        sovereign.api.v1.UpdateDataSourceReply:
+            type: object
+            properties: {}
+        sovereign.api.v1.UpdateDataSourceRequest:
+            type: object
+            properties:
+                uid:
+                    type: string
+                name:
+                    type: string
+                status:
+                    type: integer
+                    format: enum
+                endpoint:
+                    type: string
+                description:
+                    type: string
+                config:
+                    type: object
+                    additionalProperties:
+                        type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
+        sovereign.api.v1.UpdateDataSourceStatusReply:
+            type: object
+            properties: {}
+        sovereign.api.v1.UpdateDataSourceStatusRequest:
+            type: object
+            properties:
+                uid:
+                    type: string
+                status:
+                    type: integer
+                    format: enum
         sovereign.api.v1.UpdateNamespaceReply:
             type: object
             properties: {}
@@ -291,5 +614,6 @@ components:
                     type: integer
                     format: enum
 tags:
+    - name: DataSource
     - name: Health
     - name: Namespace
