# pkg/api/v1/datasource_http.pb.go
@@ -1,0 +1,312 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             v6.32.1
+// source: api/v1/datasource.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationDataSourceCreateDataSource = "/sovereign.api.v1.DataSource/CreateDataSource"
+const OperationDataSourceDeleteDataSource = "/sovereign.api.v1.DataSource/DeleteDataSource"
+const OperationDataSourceGetDataSource = "/sovereign.api.v1.DataSource/GetDataSource"
+const OperationDataSourceListDataSource = "/sovereign.api.v1.DataSource/ListDataSource"
+const OperationDataSourceSelectDataSource = "/sovereign.api.v1.DataSource/SelectDataSource"
+const OperationDataSourceUpdateDataSource = "/sovereign.api.v1.DataSource/UpdateDataSource"
+const OperationDataSourceUpdateDataSourceStatus = "/sovereign.api.v1.DataSource/UpdateDataSourceStatus"
+
+type DataSourceHTTPServer interface {
+	CreateDataSource(context.Context, *CreateDataSourceRequest) (*CreateDataSourceReply, error)
+	DeleteDataSource(context.Context, *DeleteDataSourceRequest) (*DeleteDataSourceReply, error)
+	GetDataSource(context.Context, *GetDataSourceRequest) (*DataSourceItem, error)
+	ListDataSource(context.Context, *ListDataSourceRequest) (*ListDataSourceReply, error)
+	SelectDataSource(context.Context, *SelectDataSourceRequest) (*SelectDataSourceReply, error)
+	UpdateDataSource(context.Context, *UpdateDataSourceRequest) (*UpdateDataSourceReply, error)
+	UpdateDataSourceStatus(context.Context, *UpdateDataSourceStatusRequest) (*UpdateDataSourceStatusReply, error)
+}
+
+func RegisterDataSourceHTTPServer(s *http.Server, srv DataSourceHTTPServer) {
+	r := s.Route("/")
+	r.POST("/v1/datasource", _DataSource_CreateDataSource0_HTTP_Handler(srv))
+	r.PUT("/v1/datasource/{uid}", _DataSource_UpdateDataSource0_HTTP_Handler(srv))
+	r.PUT("/v1/datasource/{uid}/status", _DataSource_UpdateDataSourceStatus0_HTTP_Handler(srv))
+	r.DELETE("/v1/datasource/{uid}", _DataSource_DeleteDataSource0_HTTP_Handler(srv))
+	r.GET("/v1/datasource/{uid}", _DataSource_GetDataSource0_HTTP_Handler(srv))
+	r.GET("/v1/datasources", _DataSource_ListDataSource0_HTTP_Handler(srv))
+	r.GET("/v1/datasources/select", _DataSource_SelectDataSource0_HTTP_Handler(srv))
+}
+
+func _DataSource_CreateDataSource0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateDataSourceRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceCreateDataSource)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateDataSource(ctx, req.(*CreateDataSourceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CreateDataSourceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _DataSource_UpdateDataSource0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateDataSourceRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceUpdateDataSource)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateDataSource(ctx, req.(*UpdateDataSourceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateDataSourceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _DataSource_UpdateDataSourceStatus0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateDataSourceStatusRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceUpdateDataSourceStatus)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateDataSourceStatus(ctx, req.(*UpdateDataSourceStatusRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateDataSourceStatusReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _DataSource_DeleteDataSource0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in DeleteDataSourceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceDeleteDataSource)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.DeleteDataSource(ctx, req.(*DeleteDataSourceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*DeleteDataSourceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _DataSource_GetDataSource0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetDataSourceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceGetDataSource)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetDataSource(ctx, req.(*GetDataSourceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*DataSourceItem)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _DataSource_ListDataSource0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListDataSourceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceListDataSource)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListDataSource(ctx, req.(*ListDataSourceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListDataSourceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _DataSource_SelectDataSource0_HTTP_Handler(srv DataSourceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in SelectDataSourceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDataSourceSelectDataSource)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.SelectDataSource(ctx, req.(*SelectDataSourceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SelectDataSourceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type DataSourceHTTPClient interface {
+	CreateDataSource(ctx context.Context, req *CreateDataSourceRequest, opts ...http.CallOption) (rsp *CreateDataSourceReply, err error)
+	DeleteDataSource(ctx context.Context, req *DeleteDataSourceRequest, opts ...http.CallOption) (rsp *DeleteDataSourceReply, err error)
+	GetDataSource(ctx context.Context, req *GetDataSourceRequest, opts ...http.CallOption) (rsp *DataSourceItem, err error)
+	ListDataSource(ctx context.Context, req *ListDataSourceRequest, opts ...http.CallOption) (rsp *ListDataSourceReply, err error)
+	SelectDataSource(ctx context.Context, req *SelectDataSourceRequest, opts ...http.CallOption) (rsp *SelectDataSourceReply, err error)
+	UpdateDataSource(ctx context.Context, req *UpdateDataSourceRequest, opts ...http.CallOption) (rsp *UpdateDataSourceReply, err error)
+	UpdateDataSourceStatus(ctx context.Context, req *UpdateDataSourceStatusRequest, opts ...http.CallOption) (rsp *UpdateDataSourceStatusReply, err error)
+}
+
+type DataSourceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewDataSourceHTTPClient(client *http.Client) DataSourceHTTPClient {
+	return &DataSourceHTTPClientImpl{client}
+}
+
+func (c *DataSourceHTTPClientImpl) CreateDataSource(ctx context.Context, in *CreateDataSourceRequest, opts ...http.CallOption) (*CreateDataSourceReply, error) {
+	var out CreateDataSourceReply
+	pattern := "/v1/datasource"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationDataSourceCreateDataSource))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *DataSourceHTTPClientImpl) DeleteDataSource(ctx context.Context, in *DeleteDataSourceRequest, opts ...http.CallOption) (*DeleteDataSourceReply, error) {
+	var out DeleteDataSourceReply
+	pattern := "/v1/datasource/{uid}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDataSourceDeleteDataSource))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *DataSourceHTTPClientImpl) GetDataSource(ctx context.Context, in *GetDataSourceRequest, opts ...http.CallOption) (*DataSourceItem, error) {
+	var out DataSourceItem
+	pattern := "/v1/datasource/{uid}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDataSourceGetDataSource))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *DataSourceHTTPClientImpl) ListDataSource(ctx context.Context, in *ListDataSourceRequest, opts ...http.CallOption) (*ListDataSourceReply, error) {
+	var out ListDataSourceReply
+	pattern := "/v1/datasources"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDataSourceListDataSource))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *DataSourceHTTPClientImpl) SelectDataSource(ctx context.Context, in *SelectDataSourceRequest, opts ...http.CallOption) (*SelectDataSourceReply, error) {
+	var out SelectDataSourceReply
+	pattern := "/v1/datasources/select"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDataSourceSelectDataSource))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *DataSourceHTTPClientImpl) UpdateDataSource(ctx context.Context, in *UpdateDataSourceRequest, opts ...http.CallOption) (*UpdateDataSourceReply, error) {
+	var out UpdateDataSourceReply
+	pattern := "/v1/datasource/{uid}"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationDataSourceUpdateDataSource))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *DataSourceHTTPClientImpl) UpdateDataSourceStatus(ctx context.Context, in *UpdateDataSourceStatusRequest, opts ...http.CallOption) (*UpdateDataSourceStatusReply, error) {
+	var out UpdateDataSourceStatusReply
+	pattern := "/v1/datasource/{uid}/status"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationDataSourceUpdateDataSourceStatus))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
